--- a/tv.ipynb
+++ b/tv.ipynb
@@ -6,7 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import sys\n",
+    "# !{sys.executable} -m pip install matplotlib\n",
+    "# 如果下一行無法執行，先執行上面兩行指令\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: websocket-client in /Users/stronger/Documents/Python/.venv/lib/python3.12/site-packages (1.8.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !pip install --upgrade --no-cache-dir git+https://github.com/rongardF/tvdatafeed.git\n",
+    "# !pip install websocket-client"
    ]
   },
   {
@@ -46,7 +67,8 @@
    "source": [
     "# initialize tradingview\n",
     "\n",
-    "tv = TvDatafeed(username=username,password=password)"
+    "# tv = TvDatafeed(username=username,password=password)\n",
+    "tv = TvDatafeed()"
    ]
   },
   {
@@ -855,7 +877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
